Remove the option to run krita in multiple processes

This is not compatible with using a database like sqlite, which
doesn't allow concurrent access. Besides, changing the contents
of the database from two krita processes would lead to massive
confusion.

BUG:420078